@@ -1,6 +1,7 @@
 2012-08-21  Ingo Renner  <ingo.renner@dkd.de>
 
 	! [TEMPLATE] Changed the relevance view helpers to take the whole result document as argument (instead of just the score)
+	! [API] Moved hook modifySearchQuery to tx_solr_Search
 
 	* Refactoring: Extracted several search components to separate classes
 
